# geographiclib_conversions

./: CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: catkin_build.yml
include/geographiclib_conversions/: geodetic_conv.hpp  geographiclib_conversions.h
scripts/: install.sh
scripts/docker/: build_image.sh
src/: geographiclib_conversions.cpp
test/: geographiclib_main.cpp  geographiclib_test.cpp
